--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
+  <!-- <script src="//webapi.amap.com/maps?v=2.0&key=bc43abc74eaac8d9fde2e46894141e68"></script> -->
+  <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=bc43abc74eaac8d9fde2e46894141e68&plugin=AMap.StationSearch,AMap.LineSearch,AMap.PlaceSearch,AMap.Geocoder"></script>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
