--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <!-- <script src="//webapi.amap.com/maps?v=2.0&key=bc43abc74eaac8d9fde2e46894141e68"></script> -->
-  <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=bc43abc74eaac8d9fde2e46894141e68&plugin=AMap.StationSearch,AMap.LineSearch,AMap.PlaceSearch,AMap.Autocomplete,AMap.MarkerClusterer"></script>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title><%= htmlWebpackPlugin.options.title %></title>
+</head>
+<!-- <script src="//webapi.amap.com/maps?v=2.0&key=bc43abc74eaac8d9fde2e46894141e68"></script> -->
+<script type="text/javascript"
+  src="https://webapi.amap.com/maps?v=1.4.15&key=bc43abc74eaac8d9fde2e46894141e68&plugin=AMap.StationSearch,AMap.LineSearch,AMap.PlaceSearch,AMap.Autocomplete,AMap.MarkerClusterer,AMap.DistrictLayer">
+</script>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+      Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
