--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <!-- <script src="//webapi.amap.com/maps?v=2.0&key=bc43abc74eaac8d9fde2e46894141e68"></script> -->
+<!-- <link rel="stylesheet" href="https://cache.amap.com/lbs/static/main1119.css"/> -->
 <script type="text/javascript"
   src="https://webapi.amap.com/maps?v=1.4.15&key=bc43abc74eaac8d9fde2e46894141e68&plugin=AMap.StationSearch,AMap.LineSearch,AMap.PlaceSearch,AMap.Autocomplete,AMap.MarkerClusterer,AMap.DistrictLayer">
 </script>
